@@ -15,6 +15,7 @@ launchpad-buildd (190) UNRELEASED; urgency=medium
   * Fix OCI tests on Python 3.
   * Make buildrecipe compatible with Python 3.
   * Fix get_arch_bits for Python 3.
+  * Skip tests involving daemonisation on Python 3 and Twisted < 16.4.0.
 
  -- Colin Watson <cjwatson@ubuntu.com>  Tue, 28 Apr 2020 10:19:27 +0100
 
